playground/notas_tests/valid/inf-05.hulk
function triple(n) => n * 3;
print(triple(7));
