playground/notas_tests/invalid/glob-01.hulk
let PI = 3 in print(PI);
